--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 15:05:02 2018</p>
+         Last Run: Mon Nov 26 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>72</td>
                         <td>0</td>
                         <td>14</td>
@@ -45,24 +45,24 @@
                         <td>Overcast</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>71</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SW</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>73</td>
                         <td>0</td>
                         <td>18</td>
                         <td>SW</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "2",
                  "3",
-                 "4",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "98",
-                 "97",
-                 "94"
+                 "98",
+                 "95"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 15:05:02 2018</p>
+         Last Run: Mon Nov 26 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +250,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +262,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +274,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "76",
-                 "78"
+                 "75",
+                 "75",
+                 "79"
                ]
              },
              {
@@ -397,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "3"
+                 "11",
+                 "7",
+                 "6"
                ]
              }
            ]
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 15:05:02 2018</p>
+         Last Run: Mon Nov 26 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,7 +464,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
@@ -475,7 +476,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
@@ -590,8 +591,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
-                 "23",
+                 "35",
+                 "22",
                  "23"
                ]
              },
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 15:05:02 2018</p>
+         Last Run: Mon Nov 26 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -706,7 +707,7 @@
                         <td>66</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>66</td>
                      </tr>
                   </tbody>
