--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 18:05:06 2018</p>
+         Last Run: Mon Nov 26 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,33 +31,33 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>72</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>76</td>
+                        <td>0</td>
+                        <td>16</td>
                         <td>SW</td>
-                        <td>98</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>2</td>
-                        <td>71</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>16</td>
                         <td>SW</td>
-                        <td>98</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>3</td>
+                        <td>0</td>
                         <td>72</td>
                         <td>0</td>
                         <td>18</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-1",
                  "-1"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "3",
                  "3"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "2",
-                 "3"
+                 "0",
+                 "0",
+                 "0"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "71",
+                 "76",
+                 "74",
                  "72"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
+                 "94",
+                 "95",
                  "96"
                ]
              }
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 18:05:06 2018</p>
+         Last Run: Mon Nov 26 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -262,11 +262,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -274,7 +274,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>80</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "76",
-                 "80"
+                 "75",
+                 "75",
+                 "77"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "12",
-                 "9",
+                 "10",
                  "7"
                ]
              }
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 18:05:06 2018</p>
+         Last Run: Mon Nov 26 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -461,39 +461,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>33</td>
-                        <td>73</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>86</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>19</td>
-                        <td>70</td>
+                        <td>23</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
                         <td>84</td>
                      </tr>
                      <tr>
-                        <td>03:00 PM</td>
+                        <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>21</td>
-                        <td>69</td>
+                        <td>17</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
+                        <td>N</td>
+                        <td>82</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>17</td>
+                        <td>70</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>85</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -522,7 +522,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -591,9 +591,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "19",
-                 "21"
+                 "23",
+                 "17",
+                 "17"
                ]
              },
              {
@@ -603,8 +603,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "70",
-                 "69"
+                 "71",
+                 "70"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
                  "84",
-                 "85"
+                 "82",
+                 "82"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 18:05:06 2018</p>
+         Last Run: Mon Nov 26 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -680,23 +680,23 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>8</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>84</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
-                        <td>-8</td>
+                        <td>-7</td>
                         <td>6</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>N</td>
-                        <td>77</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -704,11 +704,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>6</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>67</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-8",
+                 "-7",
                  "-8"
                ]
              },
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "71",
-                 "67"
+                 "75",
+                 "69",
+                 "66"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "77",
-                 "67"
+                 "82",
+                 "73",
+                 "64"
                ]
              }
            ]
