--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 19:05:02 2018</p>
+         Last Run: Mon Nov 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>76</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>94</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>74</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SW</td>
-                        <td>95</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>72</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SW</td>
-                        <td>96</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "-1",
-                 "-1"
+                 "-2",
+                 "-2",
+                 "-2"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "74",
-                 "72"
+                 "83",
+                 "81",
+                 "80"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "95",
-                 "96"
+                 "89",
+                 "91",
+                 "92"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 19:05:02 2018</p>
+         Last Run: Mon Nov 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -254,7 +254,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -266,7 +266,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -274,11 +274,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>77</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -389,7 +389,7 @@
                "data":[
                  "75",
                  "75",
-                 "77"
+                 "79"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "10",
-                 "7"
+                 "11",
+                 "8",
+                 "8"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 19:05:02 2018</p>
+         Last Run: Mon Nov 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -465,7 +465,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -493,7 +493,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>82</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "74",
                  "71",
                  "70"
                ]
@@ -615,7 +615,7 @@
                "data":[
                  "84",
                  "82",
-                 "82"
+                 "83"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 19:05:02 2018</p>
+         Last Run: Mon Nov 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -696,7 +696,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>73</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -704,11 +704,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>6</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>64</td>
+                        <td>NNE</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -819,7 +819,7 @@
                "data":[
                  "75",
                  "69",
-                 "66"
+                 "65"
                ]
              },
              {
@@ -829,8 +829,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "82",
-                 "73",
-                 "64"
+                 "74",
+                 "63"
                ]
              }
            ]
